tests/p03a1.rc
function : void main() {
	const int myA = 1;
	myA = (1+2); //error

	1 = 3 = 4 = 2; //error
}
